--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.thymeleaf.cache=false
 
 spring.queries.users-query=select username, password, active from user where username=?
 spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.username=?
+
+logging.level.org.springframework.web=DEBUG
